--- a/src/content/post/kalymnos-day-2-2023/index.mdx
+++ b/src/content/post/kalymnos-day-2-2023/index.mdx
@@ -15,6 +15,6 @@ Domani spero di scalare più vie e possibilmente riuscire a chiudere un 6b. Devo
 
 ![capra che guarda il mare](./capra-mare.jpeg)
 
-![paesaggio](./paesaggio.jpeg)
+![panorama](./panorama.jpeg)
 
 ![gatto alla finestra](./gatto-finestra.jpeg)
